--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <nav>
                 <div class="navbrand">
                     <a href="#">Savant<span>World</span></a>
+                    <div class="toggler">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
                 </div>
                 <ul>
                     <li><a href="">Home</a></li>
@@ -51,5 +54,8 @@
             </div>
         </div>
     </div>
+
+
+    <script src="./index.js"></script>
 </body>
 </html>
